add submitted counts to search user response
